--- a/src/assets/scss/layouts/_album.scss
+++ b/src/assets/scss/layouts/_album.scss
@@ -61,7 +61,7 @@
         justify-items: center;
         
 
-        .slick-center .album__content-title{
+        .slick-active.slick-center .album__content-title{
             opacity: 1;
         }
 
