--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -61,6 +61,7 @@
     
                 @include respond (tablet) {
                     border-right: none;
+                    width: 7.875rem;
                 }
     
                 a{
