--- a/src/assets/scss/layouts/_personel.scss
+++ b/src/assets/scss/layouts/_personel.scss
@@ -5,12 +5,21 @@
     background-position: center center;
     background-repeat: no-repeat;
 
+    @include respond (tab-port) {
+        padding: 0 toRem(32);
+    }
+
+    @include respond (phone-mini) {
+        height: 100%;
+    }
+
     .container{
         max-width: toRem(1000);
         width: 100%;
         height: 100%;
         background: radial-gradient(50% 50% at 50% 50%, rgba(38, 79, 226, 0.3) 0%, rgba(38, 79, 226, 0.2) 30.21%, rgba(38, 79, 226, 0) 100%);
-
+        
+       
         .personel-title{
             display: flex;
             align-items: center;
@@ -37,20 +46,42 @@
             width: 100%;
             gap: toRem(38);
 
+            @include respond (tab-mini) {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            @include respond (phone-mini) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
             .personel__list--content{
 
                 &:nth-child(2){
                     padding-top: toRem(100);
+
+                    @include respond (tab-mini) {
+                        padding-top: 0;
+                    }                   
                 }
 
                 &:nth-child(4){
                     padding-top: toRem(100);
+
+                    @include respond (tab-mini) {
+                        padding-top: 0;
+                    }
                 }
 
                 img{
                     object-fit: cover;
                     display: block;
                     width: 100%;
+
+                    @include respond (tab-mini) {
+                        
+                    }
+                   
                 }
 
                 h5{
@@ -80,6 +111,10 @@
             flex-direction: column;
             justify-content: center;
 
+            @include respond (tab-mini) {
+                margin-top: toRem(96);
+            }
+
             h3{
                 width: 100%;
                 font-family: 'Gilroy';
@@ -98,6 +133,10 @@
                 text-align: center;
                 color: #9FA1A7;
                 margin: 0 auto;
+
+                @include respond (tab-port) {
+                    width: 100%;
+                }
             }
         }
     }
