--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -28,28 +28,28 @@ $h6: 22px;
 
 // Body Paragraph
 @mixin p-1() {
-    font-size: 22px;
-    line-height: 33px;
+    font-size: 22px !important;
+    line-height: 33px !important;
 }
 
 @mixin p-2(){
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 20px !important;
+    line-height: 30px !important;
 }
 
 @mixin p-3(){
-    font-size: 18px;
-    line-height: 27px;
+    font-size: 18px !important;
+    line-height: 27px !important;
 }
 
 @mixin p-4(){
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 16px !important;
+    line-height: 24px !important;
 }
 
 @mixin p-5(){
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 14px !important;
+    line-height: 21px !important;
 }
 
 // Display
