--- a/src/assets/scss/layouts/_events.scss
+++ b/src/assets/scss/layouts/_events.scss
@@ -2,7 +2,11 @@
     width: 100%;
     max-width: toRem(1000);
     width: 100%;
-    margin: 0 auto toRem(56);
+    margin: 0 auto toRem(140);
+
+    @include respond (tab-port){
+        padding: 0 toRem(16);
+    }
 
     .events__btn{
         display: block;
@@ -30,6 +34,10 @@
         width: 100%;
         border-bottom: 1px solid rgba(255, 255, 255, 0.13);
         height: toRem(166);
+
+        @include respond (phone-mini) {
+            height: min-content;
+        }
 
         h3{
             font-family: 'Gilroy';
@@ -72,6 +80,14 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: toRem(20);
+
+        @include respond (tab-mini) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include respond (phone-smallest) {
+            grid-template-columns: repeat(1, 1fr);
+        }
 
         p{
             @include p-4();
@@ -118,7 +134,7 @@
         }
 
         .event{
-            width: toRem(235);
+            // width: toRem(235);
             height: toRem(290);
             display: flex;
             flex-direction: column;
